# BJTU_Compiler_Projects

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
LC/: CMakeLists.txt
LiaIR/: CMakeLists.txt
LiaIR/liair/: Addr.cpp  Addr.hpp  Instr.cpp  Instr.hpp
LiaLEX/: CMakeLists.txt  README.md  fa.cpp  fa.hpp  main.cpp  regex_analyze.cpp  regex_analyze.hpp
LiaLEX/lialex_runtime/: lialex_runtime.hpp
LiaLEX/src/: fa.cpp  fa.hpp  main.cpp  regex_analyze.cpp  regex_analyze.hpp
LiaPPG/: CMakeLists.txt  README.md
LiaPPG/src/: main.cpp
LiaSPG/: CMakeLists.txt
LiaSPG/src/: main.cpp
LoCGL/: CMakeLists.txt  LL1.hpp  README.md  general_ast.hpp
LoCGL/locgl_runtime/: locgl_runtime.hpp
LoCGL/src/: LL1.cpp  LL1.hpp  general_ast.hpp  grammar.cpp  grammar.hpp  grammar_plus.cpp  grammar_plus.hpp  ll1_analyzer.cpp  ll1_analyzer.hpp  slr1_analyzer.cpp  slr1_analyzer.hpp
antlr4_helper/: BGrammar.g4  BLex.g4  BLexSplitter.g4  BSplit.py  gen.sh
antlr4_helper/B/: BGrammarLexer.interp  BGrammarLexer.py  BGrammarLexer.tokens
antlr4_helper/BSplitter/: BLexSplitter.interp  BLexSplitterLexer.interp  BLexSplitterLexer.py  BLexSplitterLexer.tokens  BLexSplitterListener.py  BLexSplitterParser.py  BLexSplitterVisitor.py
demo/: .gitignore  CMakeLists.txt  demo.lialex  demo_lex.hpp  demo_main.cpp  demo_source_language.txt  test.lialex
demo/demo_calculator/: .gitignore  B.liagra  B.lialex  CMakeLists.txt  run_demo_calculator.sh
demo/demo_calculator/B/: src.B
demo/demo_calculator/src/: main.cpp
demo/demo_compiler/: .gitignore  B.liagra  B.lialex  CMakeLists.txt  run_demo_compiler.sh
demo/demo_compiler/src/: main.cpp
demo/demo_compiler/src/frontend/: ast_visitor.cpp  ast_visitor.hpp  ast_visitor_for_block.cpp  ast_visitor_for_decl.cpp  b_lexer_info.hpp  b_parser_info.hpp  typedef_for_b.cpp  typedef_for_b.hpp
demo/demo_lialex/: .gitignore  B.lialex  main.cpp  run_demo_lialex.sh  src.B
demo/demo_lialex_filename/: CMakeLists.txt  dst.txt  file_name.hpp  file_name.lialex  main.cpp  run_demo_lialex.sh  src.txt
demo/demo_ppg/: .gitignore  CMakeLists.txt  LL.liagra  LL.lialex  LL_multi_lines.liagra  LL_with_literal.liagra  LL_with_literal.lialex  run_demo_liappg.sh  run_demo_ppg.sh  src.LL
demo/demo_ppg/src/: main.cpp
demo/demo_ppg_hw/: CMakeLists.txt  ast.dot  hw.liagra  hw.lialex  run_demo_ppg.sh  src.txt
demo/demo_ppg_hw/src/: hw_lexer_info.hpp  hw_parser_info.hpp  main.cpp
demo/demo_raw/: LL.liagra  ll_parser_info.hpp
demo/demo_spg/: CMakeLists.txt  LL.liagra  LL.lialex  ifelse.liagra  ifelse.lialex  run_demo_spg.sh  src.LL
demo/demo_spg/src/: main.cpp
demo/demo_spg_hw/: CMakeLists.txt  SLR.liagra  SLR.lialex  run_demo_spg.sh  src.LL
demo/demo_spg_hw/src/: main.cpp
demo/demo_with_cmake/: CMakeLists.txt  LL.liagra  run_demo_with_cmake.sh
demo/demo_with_cmake/src/: LL_Lexer.hpp  main.cpp
demo/hpp/: LL.hpp
demo/lex/: B.lialex  LL.lialex  demo.lialex
docs/: 概览.md
logs/: .gitignore  debug.txt  dfa.dot  std_log.txt
logs/nfa/: Break.dot  Continue.dot  Do.dot  Else.dot  Float.dot  For.dot  Identifier.dot  If.dot  Int.dot  Line_Comments.dot  Literal_Int.dot  M_Line_Comment_Legal_Ch.dot  M_Line_Comments.dot  OP_Add.dot  OP_Assign.dot  OP_Bang.dot  OP_Div.dot  OP_EQ.dot  OP_GE.dot  OP_GT.dot  OP_LAnd.dot  OP_LE.dot  OP_LOR.dot  OP_LT.dot  OP_Minus.dot  OP_Mod.dot  OP_Mul.dot  OP_NEQ.dot  SEP_LCBrkt.dot  SEP_LParen.dot  SEP_LSBrkt.dot  SEP_RCBrkt.dot  SEP_RParen.dot  SEP_RSBrkt.dot  SEP_Semicolon.dot  Void.dot  WS_Str.dot  While.dot  nfa.dot
logs/regex_ast/: Break.dot  Continue.dot  Digit.dot  Do.dot  Else.dot  Float.dot  For.dot  Identifier.dot  If.dot  Int.dot  Letter.dot  Line_Comment_Legal_Ch.dot  Line_Comments.dot  Literal_Int.dot  Lower_Letter.dot  M_Line_Comment_Legal_Ch.dot  M_Line_Comments.dot  OP_Add.dot  OP_Assign.dot  OP_Bang.dot  OP_Div.dot  OP_EQ.dot  OP_GE.dot  OP_GT.dot  OP_LAnd.dot  OP_LE.dot  OP_LOR.dot  OP_LT.dot  OP_Minus.dot  OP_Mod.dot  OP_Mul.dot  OP_NEQ.dot  SEP_LCBrkt.dot  SEP_LParen.dot  SEP_LSBrkt.dot  SEP_RCBrkt.dot  SEP_RParen.dot  SEP_RSBrkt.dot  SEP_Semicolon.dot  Upper_Letter.dot  (+4 more)
runtime_lib/: general_ast.hpp  lialex_runtime.hpp  locgl_runtime.hpp
tools/: clear.sh  run_demo.sh
